# ROS-Enhanced-Advanced-Assistive-System

./: README.md  empty_shelf_data.csv
backend/api_documentation/: Coordinate.md  Product.md  Robot.md  Sale.md  Supplier.md  User.md
backend/inventory-management/: app.py  untitled.txt
images/: empty_shelf_data.csv
install/: local_setup.sh  setup.sh
install/empty_shelf_detector/share/empty_shelf_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/empty_shelf_detector/share/empty_shelf_detector/cmake/: empty_shelf_detectorConfig-version.cmake  empty_shelf_detectorConfig.cmake
install/empty_shelf_detector/share/empty_shelf_detector/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/empty_shelf_msgs/share/empty_shelf_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/empty_shelf_msgs/share/empty_shelf_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  empty_shelf_msgsConfig-version.cmake  empty_shelf_msgsConfig.cmake  empty_shelf_msgs__rosidl_typesupport_cppExport-noconfig.cmake  empty_shelf_msgs__rosidl_typesupport_introspection_cExport.cmake  empty_shelf_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_empty_shelf_msgs__rosidl_generator_cExport.cmake  export_empty_shelf_msgs__rosidl_generator_pyExport-noconfig.cmake  export_empty_shelf_msgs__rosidl_generator_pyExport.cmake  export_empty_shelf_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_empty_shelf_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/empty_shelf_msgs/share/empty_shelf_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/empty_shelf_msgs/share/empty_shelf_msgs/msg/: EmptyShelfAlert.idl  EmptyShelfAlert.msg
install/turtlebot4_ignition_bringup/share/turtlebot4_ignition_bringup/: package.sh
install/turtlebot4_ignition_gui_plugins/share/turtlebot4_ignition_gui_plugins/: package.sh
install/turtlebot4_ignition_toolbox/share/turtlebot4_ignition_toolbox/: package.sh
install/turtlebot4_simulator/share/turtlebot4_simulator/: local_setup.sh  package.sh
log/: latest_build
src/empty_shelf_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/empty_shelf_detector/empty_shelf_detector/scripts/: esd.py  esd_subscriber.py
src/empty_shelf_detector/empty_shelf_detector/scripts/install/: local_setup.sh  setup.sh
src/empty_shelf_detector/empty_shelf_detector/scripts/log/: latest_build
src/empty_shelf_msgs/: CMakeLists.txt
src/empty_shelf_msgs/msg/: EmptyShelfAlert.msg
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
(+72 files in other folders)
